# python-flask/swagger_server/swagger/swagger.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: 'PICKY: Python ICinga2 to KeYbase'
   description: A Bridge between Icinga2's Notifications and Keybase
-  version: 1.1.0
+  version: 1.3.0
 servers:
 - url: https://localhost/
 paths:
@@ -10,8 +10,8 @@ paths:
     get:
       tags:
       - Hosts
-      summary: Read the entire hosts list
-      description: Read the hosts list
+      summary: Read the entire hosts-channel list
+      description: Read the hosts-channel list
       operationId: hosts_read_all
       parameters:
       - name: length
@@ -45,8 +45,8 @@ paths:
     post:
       tags:
       - Hosts
-      summary: Create a host and add it to the hosts list
-      description: Create a new host in the hosts list
+      summary: Create a host and add it to the hosts-channel list
+      description: Create a new host in the hosts-channel list
       operationId: hosts_create
       requestBody:
         description: Host to create
@@ -60,17 +60,50 @@ paths:
           description: Successfully created host in list
       x-swagger-router-controller: swagger_server.controllers.hosts_controller
       x-openapi-router-controller: swagger_server.controllers.hosts_controller
-  /hosts/{key}:
+  /hosts/{name}:
     get:
       tags:
       - Hosts
-      summary: Read one host from the hosts list
-      description: Read one host from the hosts list
-      operationId: hosts_read_one
+      summary: Read one host from the hosts list across all channels
+      description: Read one host from the hosts list across all channels
+      operationId: hosts_read_one_host
       parameters:
-      - name: key
+      - name: name
         in: path
-        description: Channel!Name of the host to get from the list
+        description: Name of the host to get from the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Successfully read host from hosts list operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/host'
+      x-swagger-router-controller: swagger_server.controllers.hosts_controller
+      x-openapi-router-controller: swagger_server.controllers.hosts_controller
+  /hosts/{name}/{channel}:
+    get:
+      tags:
+      - Hosts
+      summary: Read one entry from the hosts-channel list
+      description: Read one entry from the hosts-channel list
+      operationId: hosts_read_one_host_channel
+      parameters:
+      - name: name
+        in: path
+        description: Name of the host to get from the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: channel
+        in: path
+        description: Channel being notified for this host
         required: true
         style: simple
         explode: false
@@ -88,13 +121,21 @@ paths:
     put:
       tags:
       - Hosts
-      summary: Update a host in the hosts list
-      description: Update a host in the hosts list
+      summary: Update a host in the hosts-channel list
+      description: Update a host in the hosts-channel list
       operationId: hosts_update
       parameters:
-      - name: key
+      - name: name
         in: path
-        description: Channel!Name of the host to update in the list
+        description: Name of the host to update in the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: channel
+        in: path
+        description: Channel being notified for this host
         required: true
         style: simple
         explode: false
@@ -113,13 +154,21 @@ paths:
     delete:
       tags:
       - Hosts
-      summary: Delete a host from the hosts list
+      summary: Delete a host from the hosts-channel list
       description: Delete a host
       operationId: hosts_delete
       parameters:
-      - name: key
+      - name: name
         in: path
         description: Channel!Name of the host to delete from the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: channel
+        in: path
+        description: Channel being notified for this host
         required: true
         style: simple
         explode: false
@@ -133,13 +182,21 @@ paths:
     patch:
       tags:
       - Hosts
-      summary: Rebuild the services list of a host
-      description: Rebuild the services list of a host
+      summary: Rebuild the services list of a hosts-channel entry
+      description: Rebuild the services list of a hosts-channel entry
       operationId: hosts_patch
       parameters:
-      - name: key
+      - name: name
         in: path
-        description: Channel!Name of the host to update in the list
+        description: Name of the host to update in the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: channel
+        in: path
+        description: Channel being notified for this host
         required: true
         style: simple
         explode: false
@@ -151,41 +208,6 @@ paths:
       x-swagger-router-controller: swagger_server.controllers.hosts_controller
       x-openapi-router-controller: swagger_server.controllers.hosts_controller
   /services:
-    get:
-      tags:
-      - Services
-      summary: Read the entire services list
-      description: Read the services list
-      operationId: services_read_all
-      parameters:
-      - name: length
-        in: query
-        description: Number of services to get from services
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-      - name: offset
-        in: query
-        description: Offset from beginning of list where to start gathering services
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: integer
-      responses:
-        "200":
-          description: Successfully read services list operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/service'
-                x-content-type: application/json
-      x-swagger-router-controller: swagger_server.controllers.services_controller
-      x-openapi-router-controller: swagger_server.controllers.services_controller
     post:
       tags:
       - Services
@@ -204,7 +226,32 @@ paths:
           description: Successfully created service in list
       x-swagger-router-controller: swagger_server.controllers.services_controller
       x-openapi-router-controller: swagger_server.controllers.services_controller
-  /services/{key}:
+  /services/{host}:
+    get:
+      tags:
+      - Services
+      summary: Read all services from one host
+      description: Read all services from one host
+      operationId: services_read_all
+      parameters:
+      - name: host
+        in: path
+        description: Host of the service to get from the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Successfully read service from services list operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/service'
+      x-swagger-router-controller: swagger_server.controllers.services_controller
+      x-openapi-router-controller: swagger_server.controllers.services_controller
+  /services/{host}/{name}:
     get:
       tags:
       - Services
@@ -212,9 +259,17 @@ paths:
       description: Read one service from the services list
       operationId: services_read_one
       parameters:
-      - name: key
+      - name: host
         in: path
-        description: Host!Service key of the service to get from the list
+        description: Host of the service to get from the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: name
+        in: path
+        description: Name of the service to get from the list
         required: true
         style: simple
         explode: false
@@ -236,9 +291,17 @@ paths:
       description: Update a service in the services list
       operationId: services_update
       parameters:
-      - name: key
+      - name: host
         in: path
-        description: Host!Service key of the service to update in the list
+        description: Host of the service to update in the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: name
+        in: path
+        description: Name of the service to update in the list
         required: true
         style: simple
         explode: false
@@ -261,9 +324,17 @@ paths:
       description: Delete a service
       operationId: services_delete
       parameters:
-      - name: key
+      - name: host
         in: path
-        description: Host!Service key of the service to delete from the list
+        description: Host of the service to delete from the list
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: name
+        in: path
+        description: Name of the service to delete the list
         required: true
         style: simple
         explode: false
@@ -298,7 +369,7 @@ components:
         output:
           type: string
           description: Output of host check command
-          default: None
+          default: ""
         timestamp:
           type: string
           description: Last update
@@ -309,7 +380,7 @@ components:
         msg_id: 0
         state: DOWN
         output: some output of the host check
-        timestamp: timestamp
+        timestamp: now
     service:
       type: object
       properties:
